Add router, and stub out link. Add image.

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: lightgray;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +11,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+main, .App-Header {
+  max-width: 55rem;
+  margin: auto;
+}
+
 
 .App-link {
   color: #61dafb;
